--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -21,7 +21,7 @@ a, .green {
   }
 } */
 
-@media (min-width: 1024px) {
+/* @media (min-width: 1024px) { */
   body {
     display: flex;
     place-items: center;
@@ -32,4 +32,6 @@ a, .green {
     flex-direction: column;
     padding: 0 2rem;
   } */
-}
+/* } */
+
+
